# django-manifest-loader

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  conf.py  index.rst  package.json  runtests.py  setup.cfg  setup.py
.github/workflows/: manifest_loader_ci.yml
_build/doctrees/: README.doctree  environment.pickle  index.doctree
_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
django_project/easy_django_webpack/: apps.py
django_project/frontend/: views.py
django_project/project/: settings.py  urls.py
docs/: README.md  conf.py  index.rst
docs/docs/: README.md  about_install.md  advanced_usage.md  api_reference.rst  docs_license.md  examples.rst  loaders.md  philosophy.md  reference.md  usage.md
easy_django_webpack/templatetags/: manifest.py
example_project/: package-lock.json  package.json  webpack.config.js
example_project/frontend/: views.py
example_project/project/: settings.py  urls.py
example_projects/: README.md
example_projects/basic_usage/: README.md  package-lock.json  package.json
example_projects/create_react_app/: package-lock.json  package.json
example_projects/jinja_templates/: manage.py  package-lock.json  package.json  webpack.config.js
example_projects/react_and_split_chunks/: package-lock.json  package.json  requirements.txt  webpack.config.js
manifest_loader/: apps.py  exceptions.py  jinja_filters.py  loaders.py  storage.py  utils.py
manifest_loader/templatetags/: manifest.py
tests/: test_settings.py  tests.py
(+44 files in other folders)
