[metadata]
name = django-manifest-loader
version = 0.0.2
description = A Django app to load webpack assets.
long_description = file: README.md
url = https://www.github.com/shonin/django-manifest-loader
author = Shonin
author_email = emc@hey.com
license = BSD-3-Clause
keywords = django, webpack, manifest, loader
long_description_content_type = text/markdown
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    django